--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,3 @@
-<!-- NOTE: You should not modify anything in this file except the <title> tag,
-unless you know exactly what you're doing! -->
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -11,7 +8,7 @@ unless you know exactly what you're doing! -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <link rel="shortcut icon" href="%PUBLIC_URL%/wineicon.ico">
 
-    <title>w&s Craft Connection</title>
+    <title>Wine & Spirits Craft Connection</title>
   </head>
   <body>
     <noscript>
